[gd_scene load_steps=5 format=3 uid="uid://cfoe0ue5nqf8p"]

[ext_resource type="Script" uid="uid://deqnrjjbk8huq" path="res://Scenes/teleport_corridor_SCRIPT.gd" id="1_n4brr"]
[ext_resource type="PackedScene" uid="uid://b88sp1r5pjo0" path="res://Assets 3D/Infinite Corridor.glb" id="2_i3ke3"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_t1pxs"]
data = PackedVector3Array(-5.4821997, -0.0433, -5.1772, -5.5139, 2.583, -2.6833, -5.4919, -0.053, -2.6833, -5.4821997, -0.0433, -5.1772, -5.4919, 2.583, -5.1868997, -5.5139, 2.583, -2.6833, -5.4919, -0.053, -2.6833, -2.9352999, -0.053, 5.1338997, -2.9657, -0.0678, -2.6606998, -5.4919, -0.053, -2.6833, -5.4919, -0.053, 5.1338997, -2.9352999, -0.053, 5.1338997, 5.1089, -0.049999997, -5.1839, -2.9882998, 2.583, -5.2089, -2.9882998, -0.053, -5.1868997, 5.1089, -0.049999997, -5.1839, 5.1004, 2.583, -5.2009997, -2.9882998, 2.583, -5.2089, -2.9352999, -0.053, 5.1338997, -2.9352999, 2.583, -2.6303, -2.9657, -0.0678, -2.6606998, -2.9352999, -0.053, 5.1338997, -2.9133, 2.583, 5.1338997, -2.9352999, 2.583, -2.6303, 5.1089, -0.049999997, -5.1839, 13.2557, 2.583, -5.1868997, 5.1004, 2.583, -5.2009997, 5.1089, -0.049999997, -5.1839, 13.245999, -0.0433, -5.1772, 13.2557, 2.583, -5.1868997, -5.4919, -0.053, -2.6833, -5.5139, 2.583, 5.1338997, -5.4919, -0.053, 5.1338997, -5.4919, -0.053, -2.6833, -5.5139, 2.583, -2.6833, -5.5139, 2.583, 5.1338997, -2.9657, -0.0678, -2.6606998, 5.1004, 2.583, -2.6162, 5.1089, -0.049999997, -2.6332998, -2.9657, -0.0678, -2.6606998, -2.9352999, 2.583, -2.6303, 5.1004, 2.583, -2.6162, -5.4919, -0.053, 5.1338997, -2.945, -0.0433, 13.2227, -2.9352999, -0.053, 5.1338997, -5.4919, -0.053, 5.1338997, -5.4821997, -0.0433, 13.2227, -2.945, -0.0433, 13.2227, -2.9882998, -0.053, -5.1868997, -5.4919, 2.583, -5.1868997, -5.4821997, -0.0433, -5.1772, -2.9882998, -0.053, -5.1868997, -2.9882998, 2.583, -5.2089, -5.4919, 2.583, -5.1868997, -2.9882998, -0.053, -5.1868997, -5.4919, -0.053, -2.6833, -2.9657, -0.0678, -2.6606998, -2.9882998, -0.053, -5.1868997, -5.4821997, -0.0433, -5.1772, -5.4919, -0.053, -2.6833, 5.1157, -0.072799996, -4.4393, 13.245999, -0.0433, -5.1772, 5.1089, -0.049999997, -5.1839, 13.245999, -0.0433, -2.6399999, 13.2557, 2.583, -5.1868997, 13.245999, -0.0433, -5.1772, 13.245999, -0.0433, -2.6399999, 13.2557, 2.583, -2.6303, 13.2557, 2.583, -5.1868997, 5.1157, -0.072799996, -4.4393, 13.245999, -0.0433, -2.6399999, 13.245999, -0.0433, -5.1772, 5.1157, -0.072799996, -4.4393, 5.1157, -0.072799996, -3.3779, 13.245999, -0.0433, -2.6399999, -5.4821997, -0.0433, 13.2227, -2.9352999, 2.583, 13.2324, -2.945, -0.0433, 13.2227, -5.4821997, -0.0433, 13.2227, -5.4919, 2.583, 13.2324, -2.9352999, 2.583, 13.2324, 5.1004, 2.583, -2.6162, 13.245999, -0.0433, -2.6399999, 5.1089, -0.049999997, -2.6332998, 5.1004, 2.583, -2.6162, 13.2557, 2.583, -2.6303, 13.245999, -0.0433, -2.6399999, 5.1089, -0.049999997, -2.6332998, 5.1157, -0.072799996, -3.3779, -2.9657, -0.0678, -2.6606998, -5.5139, 2.583, 5.1338997, -5.4821997, -0.0433, 13.2227, -5.4919, -0.053, 5.1338997, -5.5139, 2.583, 5.1338997, -5.4919, 2.583, 13.2324, -5.4821997, -0.0433, 13.2227, -2.9352999, -0.053, 5.1338997, -2.9352999, 2.583, 13.2324, -2.9133, 2.583, 5.1338997, -2.9352999, -0.053, 5.1338997, -2.945, -0.0433, 13.2227, -2.9352999, 2.583, 13.2324, 5.1089, -0.049999997, -2.6332998, 13.245999, -0.0433, -2.6399999, 5.1157, -0.072799996, -3.3779, 5.0589, 2.4477, -4.4393, 5.1004, 2.583, -2.6162, 5.0589, 2.4477, -3.3779, 5.0589, 2.4477, -4.4393, 5.1004, 2.583, -5.2009997, 5.1004, 2.583, -2.6162, 5.1157, -0.072799996, -4.4393, 5.1004, 2.583, -5.2009997, 5.0589, 2.4477, -4.4393, 5.1157, -0.072799996, -4.4393, 5.1089, -0.049999997, -5.1839, 5.1004, 2.583, -5.2009997, 5.0589, 2.4477, -3.3779, 5.1089, -0.049999997, -2.6332998, 5.1157, -0.072799996, -3.3779, 5.0589, 2.4477, -3.3779, 5.1004, 2.583, -2.6162, 5.1089, -0.049999997, -2.6332998, 5.1157, -0.072799996, -4.4393, 5.1089, -0.049999997, -5.1839, -2.9882998, -0.053, -5.1868997, -2.9657, -0.0678, -2.6606998, 5.1157, -0.072799996, -4.4393, -2.9882998, -0.053, -5.1868997, -2.9657, -0.0678, -2.6606998, 5.1157, -0.072799996, -3.3779, 5.1157, -0.072799996, -4.4393, -4.7443, 2.4477, 5.2089, -2.9882998, 2.583, 5.2089, -3.6829, 2.4477, 5.2089, -3.6829, 2.4477, 5.2089, -2.9882998, 2.583, 5.2089, -2.9882998, 0, 5.2089, -3.6829, 2.4477, 5.2089, -2.9882998, 0, 5.2089, -3.6829, 0, 5.2089, -4.7443, 2.4477, 5.2089, -5.4389, 2.583, 5.2089, -2.9882998, 2.583, 5.2089, -4.7443, 0, 5.2089, -5.4389, 2.583, 5.2089, -4.7443, 2.4477, 5.2089, -4.7443, 0, 5.2089, -5.4389, 0, 5.2089, -5.4389, 2.583, 5.2089, -5.3956, 0.0433, -5.0906, -5.3638997, 2.583, -2.6833, -5.3859, 2.583, -5.0808997, -5.3956, 0.0433, -5.0906, -5.3859, 0.053, -2.6833, -5.3638997, 2.583, -2.6833, -5.3859, 0.053, -2.6833, -3.0414, 0.053, 5.1338997, -5.3859, 0.053, 5.1338997, -5.3859, 0.053, -2.6833, -3.0109, 0.0678, -2.7059, -3.0414, 0.053, 5.1338997, 5.1589, 0.049999997, -5.0839, -2.9882998, 2.583, -5.0589, 5.1675, 2.583, -5.0667996, 5.1589, 0.049999997, -5.0839, -2.9882998, 0.053, -5.0808997, -2.9882998, 2.583, -5.0589, -3.0414, 0.053, 5.1338997, -3.0414, 2.583, -2.7364, -3.0633, 2.583, 5.1338997, -3.0414, 0.053, 5.1338997, -3.0109, 0.0678, -2.7059, -3.0414, 2.583, -2.7364, 5.1589, 0.049999997, -5.0839, 13.149699, 2.583, -5.0808997, 13.1594, 0.0433, -5.0906, 5.1589, 0.049999997, -5.0839, 5.1675, 2.583, -5.0667996, 13.149699, 2.583, -5.0808997, -5.3859, 0.053, -2.6833, -5.3638997, 2.583, 5.1338997, -5.3638997, 2.583, -2.6833, -5.3859, 0.053, -2.6833, -5.3859, 0.053, 5.1338997, -5.3638997, 2.583, 5.1338997, -3.0109, 0.0678, -2.7059, 5.1675, 2.583, -2.7503998, -3.0414, 2.583, -2.7364, -3.0109, 0.0678, -2.7059, 5.1589, 0.049999997, -2.7333, 5.1675, 2.583, -2.7503998, -5.3859, 0.053, 5.1338997, -3.0316, 0.0433, 13.1361, -5.3956, 0.0433, 13.1361, -5.3859, 0.053, 5.1338997, -3.0414, 0.053, 5.1338997, -3.0316, 0.0433, 13.1361, -2.9882998, 0.053, -5.0808997, -5.3859, 2.583, -5.0808997, -2.9882998, 2.583, -5.0589, -2.9882998, 0.053, -5.0808997, -5.3956, 0.0433, -5.0906, -5.3859, 2.583, -5.0808997, -2.9882998, 0.053, -5.0808997, -5.3859, 0.053, -2.6833, -5.3956, 0.0433, -5.0906, -2.9882998, 0.053, -5.0808997, -3.0109, 0.0678, -2.7059, -5.3859, 0.053, -2.6833, 5.1521, 0.072799996, -4.4393, 5.1589, 0.049999997, -5.0839, 13.1594, 0.0433, -5.0906, 13.1594, 0.0433, -2.7266, 13.149699, 2.583, -5.0808997, 13.149699, 2.583, -2.7364, 13.1594, 0.0433, -2.7266, 13.1594, 0.0433, -5.0906, 13.149699, 2.583, -5.0808997, 5.1521, 0.072799996, -4.4393, 13.1594, 0.0433, -2.7266, 5.1521, 0.072799996, -3.3779, 5.1521, 0.072799996, -4.4393, 13.1594, 0.0433, -5.0906, 13.1594, 0.0433, -2.7266, -5.3956, 0.0433, 13.1361, -3.0414, 2.583, 13.1263, -5.3859, 2.583, 13.1263, -5.3956, 0.0433, 13.1361, -3.0316, 0.0433, 13.1361, -3.0414, 2.583, 13.1263, 5.1675, 2.583, -2.7503998, 13.1594, 0.0433, -2.7266, 13.149699, 2.583, -2.7364, 5.1675, 2.583, -2.7503998, 5.1589, 0.049999997, -2.7333, 13.1594, 0.0433, -2.7266, 5.1589, 0.049999997, -2.7333, -3.0109, 0.0678, -2.7059, 5.1521, 0.072799996, -3.3779, -5.3638997, 2.583, 5.1338997, -5.3956, 0.0433, 13.1361, -5.3859, 2.583, 13.1263, -5.3638997, 2.583, 5.1338997, -5.3859, 0.053, 5.1338997, -5.3956, 0.0433, 13.1361, -3.0414, 0.053, 5.1338997, -3.0414, 2.583, 13.1263, -3.0316, 0.0433, 13.1361, -3.0414, 0.053, 5.1338997, -3.0633, 2.583, 5.1338997, -3.0414, 2.583, 13.1263, 5.1589, 0.049999997, -2.7333, 5.1521, 0.072799996, -3.3779, 13.1594, 0.0433, -2.7266, 5.2089, 2.4477, -4.4393, 5.1675, 2.583, -2.7503998, 5.1675, 2.583, -5.0667996, 5.2089, 2.4477, -4.4393, 5.2089, 2.4477, -3.3779, 5.1675, 2.583, -2.7503998, 5.1521, 0.072799996, -4.4393, 5.1675, 2.583, -5.0667996, 5.1589, 0.049999997, -5.0839, 5.1521, 0.072799996, -4.4393, 5.2089, 2.4477, -4.4393, 5.1675, 2.583, -5.0667996, 5.2089, 2.4477, -3.3779, 5.1589, 0.049999997, -2.7333, 5.1675, 2.583, -2.7503998, 5.2089, 2.4477, -3.3779, 5.1521, 0.072799996, -3.3779, 5.1589, 0.049999997, -2.7333, 5.1521, 0.072799996, -4.4393, -2.9882998, 0.053, -5.0808997, 5.1589, 0.049999997, -5.0839, -3.0109, 0.0678, -2.7059, 5.1521, 0.072799996, -4.4393, 5.1521, 0.072799996, -3.3779, -3.0109, 0.0678, -2.7059, -2.9882998, 0.053, -5.0808997, 5.1521, 0.072799996, -4.4393, -4.7443, 2.4477, 5.0589, -2.9882998, 2.583, 5.0589, -5.4389, 2.583, 5.0589, -4.7443, 0, 5.0589, -4.7443, 2.4477, 5.0589, -5.4389, 2.583, 5.0589, -4.7443, 0, 5.0589, -5.4389, 2.583, 5.0589, -5.4389, 0, 5.0589, -4.7443, 2.4477, 5.0589, -3.6829, 2.4477, 5.0589, -2.9882998, 2.583, 5.0589, -3.6829, 2.4477, 5.0589, -2.9882998, 0, 5.0589, -2.9882998, 2.583, 5.0589, -3.6829, 2.4477, 5.0589, -3.6829, 0, 5.0589, -2.9882998, 0, 5.0589, -5.5139, 2.583, -2.6833, -5.3638997, 2.583, 5.1338997, -5.5139, 2.583, 5.1338997, -5.5139, 2.583, 5.1338997, -5.3638997, 2.583, 5.1338997, -5.3859, 2.583, 13.1263, -5.5139, 2.583, -2.6833, -5.3638997, 2.583, -2.6833, -5.3638997, 2.583, 5.1338997, -5.5139, 2.583, 5.1338997, -5.3859, 2.583, 13.1263, -5.4919, 2.583, 13.2324, -5.4919, 2.583, 13.2324, -5.3859, 2.583, 13.1263, -3.0414, 2.583, 13.1263, -5.4919, 2.583, 13.2324, -3.0414, 2.583, 13.1263, -2.9352999, 2.583, 13.2324, -5.4919, 2.583, -5.1868997, -5.3638997, 2.583, -2.6833, -5.5139, 2.583, -2.6833, -5.4919, 2.583, -5.1868997, -5.3859, 2.583, -5.0808997, -5.3638997, 2.583, -2.6833, -2.9882998, 2.583, -5.2089, -5.3859, 2.583, -5.0808997, -5.4919, 2.583, -5.1868997, -2.9882998, 2.583, -5.2089, -2.9882998, 2.583, -5.0589, -5.3859, 2.583, -5.0808997, 5.1004, 2.583, -5.2009997, -2.9882998, 2.583, -5.0589, -2.9882998, 2.583, -5.2089, 5.1004, 2.583, -5.2009997, 5.1675, 2.583, -5.0667996, -2.9882998, 2.583, -5.0589, 5.1004, 2.583, -5.2009997, 5.1675, 2.583, -5.0667996, 5.1675, 2.583, -2.7503998, 5.1004, 2.583, -5.2009997, 5.1675, 2.583, -2.7503998, 5.1004, 2.583, -2.6162, 13.2557, 2.583, -5.1868997, 5.1675, 2.583, -5.0667996, 5.1004, 2.583, -5.2009997, 13.2557, 2.583, -5.1868997, 13.149699, 2.583, -5.0808997, 5.1675, 2.583, -5.0667996, 13.2557, 2.583, -2.6303, 13.149699, 2.583, -5.0808997, 13.2557, 2.583, -5.1868997, 13.2557, 2.583, -2.6303, 13.149699, 2.583, -2.7364, 13.149699, 2.583, -5.0808997, 5.0589, 2.4477, -3.3779, 5.2089, 2.4477, -4.4393, 5.0589, 2.4477, -4.4393, 5.0589, 2.4477, -3.3779, 5.2089, 2.4477, -3.3779, 5.2089, 2.4477, -4.4393, -2.9352999, 2.583, -2.6303, 5.1675, 2.583, -2.7503998, 5.1004, 2.583, -2.6162, 5.1004, 2.583, -2.6162, 5.1675, 2.583, -2.7503998, 13.149699, 2.583, -2.7364, 5.1004, 2.583, -2.6162, 13.149699, 2.583, -2.7364, 13.2557, 2.583, -2.6303, -2.9352999, 2.583, -2.6303, -3.0414, 2.583, -2.7364, 5.1675, 2.583, -2.7503998, -2.9133, 2.583, 5.1338997, -3.0414, 2.583, -2.7364, -2.9352999, 2.583, -2.6303, -2.9133, 2.583, 5.1338997, -3.0633, 2.583, 5.1338997, -3.0414, 2.583, -2.7364, -2.9352999, 2.583, 13.2324, -3.0633, 2.583, 5.1338997, -2.9133, 2.583, 5.1338997, -2.9352999, 2.583, 13.2324, -3.0414, 2.583, 13.1263, -3.0633, 2.583, 5.1338997, 5.0589, 2.4477, -4.4393, 5.1521, 0.072799996, -4.4393, 5.1157, -0.072799996, -4.4393, 5.0589, 2.4477, -4.4393, 5.2089, 2.4477, -4.4393, 5.1521, 0.072799996, -4.4393, 5.1157, -0.072799996, -3.3779, 5.2089, 2.4477, -3.3779, 5.0589, 2.4477, -3.3779, 5.1157, -0.072799996, -3.3779, 5.1521, 0.072799996, -3.3779, 5.2089, 2.4477, -3.3779, -3.6829, 2.4477, 5.2089, -4.7443, 2.4477, 5.0589, -4.7443, 2.4477, 5.2089, -3.6829, 2.4477, 5.2089, -3.6829, 2.4477, 5.0589, -4.7443, 2.4477, 5.0589, -5.4389, 0, 5.2089, -5.4389, 2.583, 5.0589, -5.4389, 2.583, 5.2089, -5.4389, 0, 5.2089, -5.4389, 0, 5.0589, -5.4389, 2.583, 5.0589, -2.9882998, 2.583, 5.2089, -2.9882998, 0, 5.0589, -2.9882998, 0, 5.2089, -2.9882998, 2.583, 5.2089, -2.9882998, 2.583, 5.0589, -2.9882998, 0, 5.0589, -5.4389, 2.583, 5.2089, -2.9882998, 2.583, 5.0589, -2.9882998, 2.583, 5.2089, -5.4389, 2.583, 5.2089, -5.4389, 2.583, 5.0589, -2.9882998, 2.583, 5.0589, -4.7443, 2.4477, 5.2089, -4.7443, 0, 5.0589, -4.7443, 0, 5.2089, -4.7443, 2.4477, 5.2089, -4.7443, 2.4477, 5.0589, -4.7443, 0, 5.0589, -3.6829, 0, 5.2089, -3.6829, 2.4477, 5.0589, -3.6829, 2.4477, 5.2089, -3.6829, 0, 5.2089, -3.6829, 0, 5.0589, -3.6829, 2.4477, 5.0589, -2.9882998, 0, 5.2089, -3.6829, 0, 5.0589, -3.6829, 0, 5.2089, -2.9882998, 0, 5.2089, -2.9882998, 0, 5.0589, -3.6829, 0, 5.0589, -4.7443, 0, 5.2089, -5.4389, 0, 5.0589, -5.4389, 0, 5.2089, -4.7443, 0, 5.2089, -4.7443, 0, 5.0589, -5.4389, 0, 5.0589)

[sub_resource type="BoxShape3D" id="BoxShape3D_tjb3b"]
size = Vector3(2.2734375, 3.0421143, 0.15771484)

[node name="TeleportCorridor" type="Node3D"]
script = ExtResource("1_n4brr")

[node name="Infinite Corridor" parent="." instance=ExtResource("2_i3ke3")]

[node name="StaticBody3D" type="StaticBody3D" parent="Infinite Corridor/Plane" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Infinite Corridor/Plane/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_t1pxs")

[node name="Cube" parent="Infinite Corridor" index="1"]
visible = false

[node name="Teleport_Area_1" type="Area3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 12.671742, 0, -3.9396963)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Teleport_Area_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0210571, -0.42114258)
shape = SubResource("BoxShape3D_tjb3b")
debug_color = Color(0.13237, 0.64617777, 0, 1)

[node name="Teleport_Area_2" type="Area3D" parent="."]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -4.1773396, 0, 13.059044)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Teleport_Area_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0210571, 0)
shape = SubResource("BoxShape3D_tjb3b")
debug_color = Color(0.13237, 0.64617777, 0, 1)

[connection signal="body_entered" from="Teleport_Area_1" to="." method="_on_teleport_area_1_body_entered"]
[connection signal="body_entered" from="Teleport_Area_2" to="." method="_on_teleport_area_2_body_entered"]

[editable path="Infinite Corridor"]
